--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
   ],
   "author": "Daniyal Saqib",
   "devDependencies": {
-    "electron": "^6.0.7"
+    "electron": "^6.0.10"
+  },
+  "dependencies": {
+    "asar": "^2.0.1",
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0"
   }
 }
