--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "asar": "^2.0.1",
     "bootstrap": "^4.3.1",
     "bootstrap-colorpicker": "^3.1.2",
+    "chart.js": "^2.9.2",
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
     "sqlite3": "^4.1.0"
